<resources>
    <string name="app_name">HengShu</string>
    <string name="transfer">Transfer</string>
    <string name="copy">Copy</string>
    <string name="space">space</string>
    <string name="input">input</string>
    <string name="output">output</string>
    <string name="hanzi_space"/>
    <string name="column_space"/>
    <string name="column_space_hint">column space</string>
</resources>
